--- a/styles/maintenance.css
+++ b/styles/maintenance.css
@@ -26,9 +26,7 @@ body {
 /* Main Section */
 .outtercont {
     display: flex;
-    align-content: center;
     align-items: center;
-    justify-content: space-around;
     width: 85%;
     margin: 63px auto;
 }
@@ -44,6 +42,7 @@ body {
 
 .imgcont img {
     width: 85%;
+    min-width: 350px;
     height: auto;
     margin: 25px auto;
     padding: 25px;
@@ -53,18 +52,21 @@ body {
 }
 
 .artist {
-    margin: 25px;
+    margin: 25px auto;
     padding: 25px;
     background-color: #B6590D;
     border-radius: 12px; 
     box-shadow: 2px 2px 10px gray;
+    text-align: center;
 }
 
 .titlecont {    
     width: 75%;
+    min-width: 320px;
 }
 
 .titlecont h1 {
+    min-width: 320px;
     margin: 25px;
     padding: 25px;
     font-size: 3rem;
@@ -76,6 +78,7 @@ body {
 
 .messagecont {
     width: 75%;
+    min-width: 320px;
     margin: 25px;
     padding: 25px;
     font-size: 1.5rem;
@@ -83,8 +86,110 @@ body {
 }
 
 .messagecont p {
+    min-width: 320px;
     padding: 25px;
     border-radius: 12px;
     background-color: #B6590D;
     box-shadow: 2px 2px 10px gray;
 }
+
+/* Media Query Section */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .outtercont {
+        flex-direction: column;
+    }
+    
+    .extrascont {
+        width: 75%;
+    }
+    
+    .imgcont {
+        width: 75%;
+    }
+    
+    .imgcont img {
+        padding: 10px;
+        margin: 0px;
+    }
+    
+    .titlecont h1{
+        font-size: 2.5rem;
+        padding: 10px;
+        margin: 20px 0px;
+    }
+    
+    .messagecont {
+        font-size: 1.10rem;
+        padding: 0px;
+        margin: 20px 0px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    .outtercont {
+        flex-direction: column;
+    }
+    
+    .extrascont {
+        width: 75%;
+    }
+    
+    .imgcont {
+        width: 75%;
+    }
+    
+    .imgcont img {
+        padding: 10px;
+        margin: 0px;
+    }
+    
+    .titlecont h1{
+        font-size: 2.25rem;
+        padding: 10px;
+        margin: 20px 0px;
+    }
+    
+    .messagecont {
+        font-size: 1.25rem;
+        padding: 0px;
+        margin: 20px 0px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px ) {
+    .outtercont {
+        flex-direction: column;
+    }
+    
+    .extrascont {
+        width: 75%;
+    }
+    
+    .imgcont {
+        width: 75%;
+    }
+    
+    .imgcont img {
+        padding: 10px;
+        margin: 0px;
+    }
+    
+    .titlecont h1{
+        padding: 10px;
+        margin: 20px 0px;
+    }
+    
+    .messagecont {
+        padding: 0px;
+        margin: 20px 0px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up)*/
+@media only screen and (min-width: 1200px) {}
